src/Front End Development/Wordle/Wordle.css
.wordle-container {
  color: whitesmoke;
  max-width: 400px;
  min-height: 100vh;
  margin-inline: auto;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  user-select: none;
  row-gap: 0.5rem;
  padding: 1rem;
}

.tile-container {
  display: flex;
  flex-direction: column;
  row-gap: 0.25rem;
  margin-bottom: 0.5rem;
}

.tile-section {
  display: flex;
  gap: 0.35rem;
}

.wordleTile {
  text-align: center;
  height: 3rem;
  font-weight: bolder;
  background-color: #555;
  border-radius: 0.25rem;
  color: white;
  pointer-events: none;
}

.fourInput {
  width: calc(100% / 4);
}
.fiveInput {
  width: calc(100% / 5);
}
.sixInput {
  width: calc(100% / 6);
}

.dark {
  background-color: #77777762;
}

.gray {
  background-color: #333;
}
.yellow {
  background-color: hsl(70, 61%, 51%);
}
.green {
  background-color: hsl(122, 55%, 34%);
}

/* Keyboard */
.keyboard-container {
  display: grid;
  grid-template-columns: repeat(20, minmax(auto, 1.25em));
  grid-auto-rows: 3em;
  justify-content: center;
  color: white;
  gap: 0.25em;
}

.wordle-key {
  cursor: pointer;
  grid-column: span 2;
  color: white;
  border: none;
  border-radius: 0.25em;
  display: flex;
  justify-content: center;
  align-items: center;
}

.wordle-lg-key {
  grid-column: span 3;
}

.gray-key {
  background-color: hsl(200, 1%, 51%);
}

.dark-key {
  background-color: hsl(0, 0%, 22%);
}

.green-key {
  background-color: hsl(122, 55%, 34%);
}

.yellow-key {
  background-color: hsl(70, 61%, 51%);
}

/*  End Keyboard */

.wordleMargin {
  margin-bottom: 0.5rem;
}

.wordleLetterCount {
  display: flex;
  gap: 1rem;
}

